feat: Ignore archive and add changes

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -31,5 +31,5 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add -A
-        git commit -m "Update BTF Archives"
+        git diff-index --quiet HEAD || git commit -m "Update BTF Archives"
         git push
